--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 * {
     background-color: #edb9c4;
     color: #d1423c; 
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
