svg added instead of png

--- a/styles/main.css
+++ b/styles/main.css
@@ -38,7 +38,7 @@
 
 .container.about {
   background-color: #f4efe9;
-  background-image: url("../assets/about_jesslev.png");
+  background-image: url("../assets/svg/about_jesslev.svg");
   background-size: 100% 100%; }
 
 .container.work {
