--- a/styles/sass/components/_container.scss
+++ b/styles/sass/components/_container.scss
@@ -11,7 +11,7 @@
 
 .container.about {
     background-color: $tan-300-jl;
-    background-image: url('../assets/about_jesslev.png');
+    background-image: url('../assets/svg/about_jesslev.svg');
     background-size: 100% 100%;
 }
 
