--- a/styles/sass/components/_main-content.scss
+++ b/styles/sass/components/_main-content.scss
@@ -1,7 +1,15 @@
-.main {
-    width: 400px;
-    height: 300px;
+.main-content {
+    max-width: 1024px;
 
-    background-color: red;
-    margin-top: 5rem;
+    .content-container {
+        @include flex-direction-justify (flex, row, space-between);
+
+        width: 830px;
+        background-color: white;
+        border-radius: 2px;
+        min-height: 83vh;
+        margin-top: 4rem;
+        position: relative;
+        right: 1.5rem;
+    }
 }
