--- a/styles/sass/components/_navigation.scss
+++ b/styles/sass/components/_navigation.scss
@@ -4,19 +4,29 @@
     min-height: 100vh;
     max-width: 230px;
     overflow: scroll;
+    z-index: 1;
     
+    @media screen and (max-width: 1024px) {
+        min-height: 80vh;
+    }
+
     .logo {
         padding-top: 4rem;
-        padding-left: 7rem;
+        padding-left: 0;
 
         a {
             @include a-tag ();
+        }
+
+        @media screen and (max-width: 700px) {
+            padding-left: 0;
+            padding-top: 0;
         }
     }
 
     .navigation {
         padding-bottom: 4rem;
-        padding-left: 7rem;
+        padding-left: 0;
 
         @include ul-tag ();
 
@@ -26,6 +36,11 @@
             a {
                 @include a-tag ();
             }
+        }
+
+        @media screen and (max-width: 700px) {
+            padding-left: 0;
+            padding-top: 0;
         }
     }
 }
