--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -1,3 +1,7 @@
+// --------------------------------------------------
+// sass --watch styles/sass/main.scss:styles/main.css
+// --------------------------------------------------
+
 // BODY 
 * {
     box-sizing: border-box;
@@ -14,5 +18,6 @@
 // COMPONENTS
 @import "components/navigation";
 @import "components/container";
+@import "components/main-content";
 
-// sass --watch styles/sass/main.scss:styles/main.css
+
