--- a/styles/sass/components/_main-content.scss
+++ b/styles/sass/components/_main-content.scss
@@ -5,6 +5,11 @@
     position: relative;
     right: 1.5rem;
 
+    @media screen and (max-width: 740px) {
+        right: 0;
+        margin-top: 0;
+    }
+
     .content-container {
         @include flex-direction-justify (flex, row, space-between);
         width: 100%;
