about page adding in parts

--- a/styles/sass/base/_mixins.scss
+++ b/styles/sass/base/_mixins.scss
@@ -18,3 +18,11 @@
     flex-direction: $direction;
     justify-content: $justify;
 }
+
+// PADDING
+@mixin padding ($top, $right, $bottom, $left) {
+    padding-top: $top;
+    padding-right: $right;
+    padding-bottom: $bottom;
+    padding-left: $left;
+}
