--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,6 @@
 * {
   box-sizing: border-box;
   font-size: 16px;
-  line-height: 24px;
   margin: 0; }
 
 .navigation-wrapper {
@@ -11,7 +10,9 @@
   min-height: 100vh;
   max-width: 230px;
   overflow: scroll;
-  z-index: 1; }
+  z-index: 1;
+  position: relative;
+  left: 1.5rem; }
   @media screen and (max-width: 1024px) {
     .navigation-wrapper {
       min-height: 80vh; } }
@@ -20,7 +21,8 @@
       flex-direction: row;
       max-width: 100%;
       justify-content: space-between;
-      min-height: 0; } }
+      min-height: 0;
+      left: 0; } }
   .navigation-wrapper .logo {
     padding-top: 4rem;
     padding-left: 0; }
@@ -95,21 +97,60 @@
 .main-content {
   max-width: 1024px;
   margin-top: 4rem;
-  position: relative;
-  right: 1.5rem; }
+  position: relative; }
   @media screen and (max-width: 740px) {
     .main-content {
-      right: 0;
       margin-top: 0; } }
+  .main-content .svg-content {
+    position: absolute;
+    top: -4%;
+    right: 46%;
+    width: 23%;
+    height: 59px;
+    transform: rotate(10deg); }
+    .main-content .svg-content img {
+      width: 100%;
+      height: 100%; }
   .main-content .content-container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     width: 100%; }
     .main-content .content-container .content {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
       width: 100%;
       min-height: 83vh;
       background-color: white;
       border-radius: 2px; }
+    .main-content .content-container .image-content {
+      width: 50%; }
+      .main-content .content-container .image-content img {
+        width: 100%;
+        height: 100%; }
+    .main-content .content-container .text-content {
+      width: 50%; }
+
+#about-page .image-content {
+  width: 60%;
+  max-height: 83vh;
+  padding-top: 6rem;
+  padding-right: 2rem;
+  padding-bottom: 2rem;
+  padding-left: 2rem; }
+#about-page .text-content {
+  width: 40%;
+  padding-top: 5.5rem;
+  padding-right: 2rem;
+  padding-bottom: 2rem; }
+  #about-page .text-content h2 {
+    font-size: 48px;
+    font-family: 'Montserrat';
+    padding-bottom: 1rem; }
+  #about-page .text-content p {
+    font: 24px;
+    font-family: 'Montserrat';
+    line-height: 24px; }
 
 /*# sourceMappingURL=main.css.map */
