--- a/styles/sass/components/_main-content.scss
+++ b/styles/sass/components/_main-content.scss
@@ -3,11 +3,23 @@
     margin-top: 4rem;
 
     position: relative;
-    right: 1.5rem;
 
     @media screen and (max-width: 740px) {
-        right: 0;
         margin-top: 0;
+    }
+
+    .svg-content {
+        position: absolute;
+        top: -4%;
+        right: 46%;
+        width: 23%;
+        height: 59px;
+        transform: rotate(10deg);
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
     }
 
     .content-container {
@@ -15,10 +27,25 @@
         width: 100%;
 
         .content {
+            @include flex-direction-justify (flex, row, space-evenly);
+
             width: 100%;
             min-height: 83vh;
             background-color: white;
             border-radius: 2px;
+        }
+
+        .image-content {
+            width: 50%;
+
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+
+        .text-content {
+            width: 50%;
         }
     }
 }
