--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -6,7 +6,6 @@
 * {
     box-sizing: border-box;
     font-size: 16px;
-    line-height: 24px;
     margin: 0;
 }
 
@@ -14,10 +13,10 @@
 @import "base/variables";
 @import "base/mixins";
 
-
 // COMPONENTS
 @import "components/navigation";
 @import "components/container";
 @import "components/main-content";
 
-
+// PAGES
+@import "pages/about";
