additional vh for responsiveness

--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -17,6 +17,8 @@
 @import "components/navigation";
 @import "components/container";
 @import "components/main-content";
+@import "components/svg";
+
 
 // PAGES
 @import "pages/about";
