--- a/styles/main.css
+++ b/styles/main.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: 100vh;
+  min-height: 80vh;
   max-width: 230px;
   overflow: scroll;
   z-index: 1;
@@ -101,16 +101,6 @@
   @media screen and (max-width: 740px) {
     .main-content {
       margin-top: 0; } }
-  .main-content .svg-content {
-    position: absolute;
-    top: -4%;
-    right: 46%;
-    width: 23%;
-    height: 59px;
-    transform: rotate(10deg); }
-    .main-content .svg-content img {
-      width: 100%;
-      height: 100%; }
   .main-content .content-container {
     display: flex;
     flex-direction: row;
@@ -132,6 +122,39 @@
     .main-content .content-container .text-content {
       width: 50%; }
 
+.svg-yellow-squiggle {
+  position: absolute;
+  top: -4%;
+  right: 46%;
+  width: 23%;
+  height: 59px;
+  transform: rotate(10deg); }
+  .svg-yellow-squiggle img {
+    width: 100%;
+    height: 100%; }
+  @media screen and (max-width: 1240px) {
+    .svg-yellow-squiggle {
+      top: -6%;
+      right: 26%; } }
+
+.svg-half-full-circle {
+  position: absolute;
+  top: 80%;
+  right: 0;
+  width: 23%;
+  height: 110px;
+  transform: rotate(10deg); }
+  .svg-half-full-circle img {
+    position: absolute;
+    width: 100%;
+    height: 100%; }
+  @media screen and (max-width: 1240px) {
+    .svg-half-full-circle {
+      top: 83%;
+      width: 17%;
+      right: -30px;
+      transform: rotate(40deg); } }
+
 #about-page .image-content {
   width: 60%;
   max-height: 83vh;
@@ -139,6 +162,11 @@
   padding-right: 2rem;
   padding-bottom: 2rem;
   padding-left: 2rem; }
+  @media screen and (max-width: 1240px) {
+    #about-page .image-content {
+      width: 130%;
+      margin: 0 auto;
+      padding: 2rem; } }
 #about-page .text-content {
   width: 40%;
   padding-top: 5.5rem;
@@ -152,5 +180,9 @@
     font: 24px;
     font-family: 'Montserrat';
     line-height: 24px; }
+  @media screen and (max-width: 1240px) {
+    #about-page .text-content {
+      width: 80%;
+      margin: 0 auto; } }
 
 /*# sourceMappingURL=main.css.map */
