--- a/styles/sass/components/_main-content.scss
+++ b/styles/sass/components/_main-content.scss
@@ -33,5 +33,15 @@
         .text-content {
             width: 50%;
         }
+
+        .hidden {
+            display: none;
+            visibility: hidden;
+        }
+
+        .visible {
+            visibility: visible;
+            display: inherit;
+        }
     }
 }
