--- a/styles/main.css
+++ b/styles/main.css
@@ -25,8 +25,11 @@
       left: 0; } }
   .navigation-wrapper .logo {
     padding-top: 4rem;
-    padding-left: 0; }
+    padding-left: 0;
+    font-family: 'Baloo Thambi'; }
     .navigation-wrapper .logo a {
+      font-size: 32px;
+      color: #d1423c;
       text-decoration: none; }
     @media screen and (max-width: 740px) {
       .navigation-wrapper .logo {
@@ -39,12 +42,16 @@
     margin: 0;
     list-style: none; }
     .navigation-wrapper .navigation .nav-tab {
+      font-family: 'Baloo Thambi';
+      color: #d1423c;
       display: block; }
       .navigation-wrapper .navigation .nav-tab a {
         text-decoration: none; }
       @media screen and (max-width: 740px) {
         .navigation-wrapper .navigation .nav-tab {
           display: inline-block; } }
+    .navigation-wrapper .navigation .nav-tab.active a {
+      font-size: 24px; }
     @media screen and (max-width: 1024px) {
       .navigation-wrapper .navigation {
         padding-bottom: 0; } }
@@ -101,9 +108,9 @@
   @media screen and (max-width: 740px) {
     .main-content {
       margin-top: 0; } }
-  .main-content .hidden {
-    display: none;
-    visibility: hidden; }
+  .main-content .visible {
+    display: block;
+    visibility: visible; }
   .main-content .content-container {
     display: flex;
     flex-direction: row;
@@ -137,7 +144,9 @@
   right: 46%;
   width: 23%;
   height: 59px;
-  transform: rotate(10deg); }
+  transform: rotate(10deg);
+  display: none;
+  visibility: hidden; }
   .svg-yellow-squiggle img {
     width: 100%;
     height: 100%; }
@@ -152,7 +161,9 @@
   right: 0;
   width: 23%;
   height: 110px;
-  transform: rotate(10deg); }
+  transform: rotate(10deg);
+  display: none;
+  visibility: hidden; }
   .svg-half-full-circle img {
     position: absolute;
     width: 100%;
