--- a/styles/sass/components/_navigation.scss
+++ b/styles/sass/components/_navigation.scss
@@ -23,8 +23,12 @@
     .logo {
         padding-top: 4rem;
         padding-left: 0;
+        font-family: 'Baloo Thambi';
 
         a {
+            font-size: 32px;
+            color: $red-300-jl;
+
             @include a-tag ();
         }
 
@@ -42,6 +46,9 @@
         @include ul-tag ();
 
         .nav-tab {
+            font-family: 'Baloo Thambi';
+            color: $red-300-jl;
+
             @include li-tag ();
 
             a {
@@ -50,6 +57,12 @@
 
             @media screen and (max-width: 740px) {
                 display: inline-block;
+            }
+        }
+
+        .nav-tab.active {
+            a {
+                font-size: 24px;
             }
         }
 
