--- a/styles/sass/components/_container.scss
+++ b/styles/sass/components/_container.scss
@@ -15,6 +15,10 @@
     grid-template-columns: auto 1fr;
     grid-template-rows: auto 1fr;
 
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+    display: flex;
+
     @media screen and (min-width: 1440px) {
         width: 1240px;
     }
@@ -24,8 +28,8 @@
     }
 
     @media screen and (max-width: 740px) {
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr;
+        display: flex;
+        flex-direction: column;
         margin-top: 1rem;
     }
 }
