--- a/styles/sass/pages/_about.scss
+++ b/styles/sass/pages/_about.scss
@@ -1,7 +1,11 @@
 #about-page {
-    // @media screen and (max-height: 1240px) {
-    //     flex-direction: column;
-    // }
+    @media screen and (width: 1024px), screen and (height: 1366) {
+        flex-direction: column;
+    }
+
+    @media screen and (max-width: 970px) {
+        flex-direction: column;
+    }
 
     .image-content {
         width: 60%;
@@ -14,6 +18,15 @@
             margin: 0 auto;
             padding: 2rem;
         }
+
+        @media screen and (width: 1024px), screen and (height: 1366) {
+            width: 80%;
+            @include padding (2rem, 2rem, 1rem, 2rem);
+        }
+        @media screen and (max-width: 970px) {
+            width: 80%;
+            @include padding (2rem, 2rem, 1rem, 2rem);
+        }
     }
 
     .text-content {
@@ -24,18 +37,36 @@
             font-size: 48px;
             font-family: 'Montserrat';
             padding-bottom: 1rem;
+
+
+            @media screen and (max-width: 540px){
+                font-size: 32px;
+            }
         }
 
         p {
             font: 24px;
             font-family: 'Montserrat';
             line-height: 24px;
+
+            @media screen and (max-width: 540px){
+                font-size: 18px;
+            }
         }
 
         @media screen and (max-width: 1240px) {
             width: 80%;
             margin: 0 auto;
             // padding: 2rem;
+        }
+
+        @media screen and (width: 1024px), screen and (height: 1366) {
+            @include padding (1rem, 2rem, 2rem, 2rem);
+            margin-top: 4rem;
+        }
+        @media screen and (max-width: 970px) {
+            width: 80%;
+            @include padding (2rem, 2rem, 1rem, 2rem);
         }
     }
 }
